src/Test/Fixtures/Good/TypeQualifier/linearQubits.lf
let linear qs: [qubit; 2] = qalloc(2);