src/Test/Fixtures/Bad/Arrays/malformedQubitArrayDeclaration.lf
et qubits: [qubit; 2] = qalloc(1), qalloc(1);